-
Bug
-
Resolution: Done
-
P2: Important
-
5.0.0 Beta 2
-
None
QSessionManager is a stub in the current Qt-5.0 sources.
All the actual session management code from Qt 4's qapplication_x11.cpp has gone away.
Clearly a big regression in Qt 5, if this gets released as is.
I presume this should be delegated from QSessionManager to the xcb and windows QPA plugins?
- relates to
-
PYSIDE-1618 aboutToQuit and commitDataRequest not emitted on logout when installed through pip
-
- Closed
-
-
QTBUG-44085 QSessionManager cancel() function does not work
-
- Closed
-