src/gui/kernel/kernel.pri
@@ -56,6 +56,7 @@ HEADERS += \
         kernel/qpalette.h \
         kernel/qshortcutmap_p.h \
         kernel/qsessionmanager.h \
+        kernel/qsessionmanager_p.h \
         kernel/qwindowdefs.h \
         kernel/qscreen.h \
         kernel/qscreen_p.h \
@@ -66,7 +67,8 @@ HEADERS += \
         kernel/qplatformdialoghelper.h \
         kernel/qplatformservices.h \
         kernel/qplatformscreenpageflipper.h \
-        kernel/qplatformsystemtrayicon.h
+        kernel/qplatformsystemtrayicon.h \
+        kernel/qplatformsessionmanager.h
 
 SOURCES += \
         kernel/qclipboard_qpa.cpp \
@@ -118,7 +120,8 @@ SOURCES += \
         kernel/qplatformdialoghelper.cpp \
         kernel/qplatformservices.cpp \
         kernel/qplatformscreenpageflipper.cpp \
-        kernel/qplatformsystemtrayicon_qpa.cpp
+        kernel/qplatformsystemtrayicon_qpa.cpp \
+        kernel/qplatformsessionmanager.cpp
 
 contains(QT_CONFIG, opengl)|contains(QT_CONFIG, opengles2) {
     HEADERS += \
